--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 and now, at UofM, I serve as vice president for the UofM chapter.</p>
             <img src = "aboutme.jpg" alt = "Coming back from Romania">
         </article>
+        <article>
+            <h3>What I Do</h3>
+            <p>I am currently the Vice President of the Student Veterans of America at the University of Michigan.  I was also a on the board of the Student Veterans at Oakland University.</p>
+        </article>
     </main>
     <footer>
         <p>David Wulbrecht &copy; 2022</p>
